; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/pcie/extr_aspm.c_policy_to_aspm_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/pcie/extr_aspm.c_policy_to_aspm_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcie_link_state = type { i32 }

@aspm_policy = common dso_local global i32 0, align 4
@ASPM_STATE_ALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcie_link_state*)* @policy_to_aspm_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @policy_to_aspm_state(%struct.pcie_link_state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pcie_link_state*, align 8
  store %struct.pcie_link_state* %0, %struct.pcie_link_state** %3, align 8
  %4 = load i32, i32* @aspm_policy, align 4
  switch i32 %4, label %12 [
    i32 129, label %5
    i32 128, label %6
    i32 130, label %8
  ]

5:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @ASPM_STATE_ALL, align 4
  store i32 %7, i32* %2, align 4
  br label %13

8:                                                ; preds = %1
  %9 = load %struct.pcie_link_state*, %struct.pcie_link_state** %3, align 8
  %10 = getelementptr inbounds %struct.pcie_link_state, %struct.pcie_link_state* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %8, %6, %5
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
